<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Offland market</string>
    <string name="home">خانه</string>
    <string name="dastebandi">دسته بندی</string>
    <string name="search">جستجو</string>
    <string name="profile">پروفایل</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobileNumber">موبایل</string>
    <string name="mobileNumberِDot">موبایل:</string>
    <string name="inviteCode">کد معرف</string>
    <string name="login">ورود</string>
    <string name="addToCart">اضافه به سبد</string>
    <string name="view">مشاهده</string>
    <string name="productName">نام محصول</string>
    <string name="buyIt">موجود کن</string>
    <string name="name">نام</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="email">ایمیل(اختیاری)</string>
    <string name="save">ثبت</string>
    <string name="customerName">مشخصات گیرنده:</string>
    <string name="customerFactorName">نام خریدار:</string>
    <string name="factorNumber">شماره فاکتور:</string>
    <string name="date">تاریخ:</string>
    <string name="address">آدرس:</string>
    <string name="price">قیمت کل:</string>
    <string name="deliveryPrice">هزینه ارسال:</string>
    <string name="productList">لیست اقلام خریداری شده</string>
    <string name="mobile">موبایل:</string>
    <string name="detail">جزئیات</string>
    <string name="state">وضعیت:</string>
    <string name="credit">میزان اعتبار:</string>
    <string name="payCredit">پرداخت اعتباری</string>
    <string name="_20000">20000</string>
    <string name="payInPlace">پرداخت در محل</string>
    <string name="finilizeOrder">نهایی کردن خرید</string>
    <string name="delivered">تحوبل شده</string>
    <string name="submitOrder">ثبت نهایی خرید</string>
    <string name="_15_21">ساعت 15 تا 21</string>
    <string name="_9_14">ساعت 9 تا 14</string>
    <string name="deliveryTime">زمان تحویل</string>
    <string name="creditValue">میزان اعتبار:</string>
    <string name="creditPay">پرداخت اعتباری</string>
    <string name="addAddress">اضافه کردن آدرس</string>
    <string name="postalCode">کدپستی (اختیاری)</string>
    <string name="title">عنوان</string>
    <string name="deliveryPriceExplaination">هزینه ارسال 7000 تومان برای فاکتور کمتر از 150000 تومان</string>
    <string name="warehouseDelivery">تحویل درب انبار</string>
    <string name="choose">انتخاب</string>
    <string name="changeQuantity">تغییر تعداد</string>
    <string name="returned">مرجوع شده</string>
    <string name="ordered">سفارش شده</string>
    <string name="nice_orange">#ffa500</string>
    <string name="payable_price">مبلغ قابل پرداخت</string>
    <string name="profit">سود شما از این خرید</string>
    <string name="priceWithDiscount">جمع کل بعد از تخفیف</string>
    <string name="order">ثبت و ادامه سفارش</string>
    <string name="confirm">تایید</string>
    <string name="orderList">لیست سفارش ها</string>
    <string name="viewAll">مشاهده همه</string>
    <string name="highDiscount">محصولات پرتخفیف</string>
    <string name="quantity">تعداد:</string>
    <string name="_1">1</string>
    <string name="newQuantity">تعداد جدید</string>
    <string name="editProfile">ویرایش اطلاعات کاربری</string>
    <string name="emailProfile">خرید اعتباری ماه جاری:</string>
    <string name="_15">15%</string>
    <string name="editPhone">اصلاح شماره تلفن</string>
    <string name="searchProduct">جستجوی محصول</string>
    <string name="_12">12</string>
    <string name="wallet_value">موجودی کیف پول:</string>
    <string name="invite_code">کد دعوت:</string>
    <string name="_120000">120000</string>
    <string name="ended">تمام شد</string>
    <string name="_115">%15</string>
</resources>