<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:translationZ="8dp"
    android:layout_margin="15dp"
    android:background="@drawable/background_shape_white"
    android:padding="8dp"
    tools:targetApi="lollipop">

    <TextView
        android:id="@+id/textView33"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="right"
        android:paddingRight="8dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tx_date"
        app:layout_constraintTop_toBottomOf="@+id/btn_delivered" />

    <TextView
        android:id="@+id/tx_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="4dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView33"
        app:layout_constraintEnd_toStartOf="@+id/textView33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="8dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView33"
        app:layout_constraintStart_toEndOf="@+id/tx_price"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/tx_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="4dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView37"
        app:layout_constraintEnd_toStartOf="@+id/textView37"
        app:layout_constraintStart_toStartOf="@+id/tx_date"
        app:layout_constraintTop_toTopOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="8dp"
        android:text="@string/state"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/textView37"
        app:layout_constraintStart_toEndOf="@+id/tx_status"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/tx_status"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="right"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView39"
        app:layout_constraintEnd_toStartOf="@+id/textView39"
        app:layout_constraintStart_toStartOf="@+id/tx_price"
        app:layout_constraintTop_toTopOf="@+id/textView39" />

    <Button
        android:id="@+id/btn_11"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="2dp"
        android:background="@color/orange4"
        android:text="@string/detail"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView39"
        app:layout_constraintStart_toEndOf="@+id/btn_12"
        app:layout_constraintTop_toTopOf="@+id/textView39"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_12"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@drawable/btn_login_shape2"
        android:text="@string/detail"
        android:textColor="#ffe600"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_11"
        app:layout_constraintEnd_toStartOf="@+id/btn_11"
        app:layout_constraintStart_toStartOf="@+id/tx_status"
        app:layout_constraintTop_toTopOf="@+id/btn_11" />

    <Button
        android:id="@+id/btn_delivered"
        android:layout_width="103dp"
        android:layout_height="35dp"
        android:text="@string/delivered"
        android:background="@drawable/btn_delivered"
        android:textColor="#80c904"
        android:translationZ="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ordered"
        android:layout_width="103dp"
        android:layout_height="35dp"
        android:background="@drawable/btn_ordered"
        android:text="@string/ordered"
        android:textColor="#d1d100"
        android:visibility="invisible"
        android:translationZ="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_returned"
        android:layout_width="103dp"
        android:layout_height="35dp"
        android:background="@drawable/btn_delivered"
        android:text="@string/returned"
        android:textColor="#FA8072"
        android:translationZ="6dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>