<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_margin="8dp"
    android:background="@drawable/image_box"
    android:translationZ="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView_basket"
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:padding="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/EditTextQuantitti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_basket_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_basket_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/name"
        android:layout_marginStart="65dp"
        android:textColor="#636467"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        app:layout_constraintEnd_toStartOf="@+id/imageView_basket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView26"
        app:layout_constraintEnd_toStartOf="@+id/imageView_basket"
        app:layout_constraintStart_toEndOf="@+id/textView_basket_price"
        app:layout_constraintTop_toBottomOf="@+id/textView_basket_name" />

    <TextView
        android:id="@+id/textView_basket_price"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/_20000"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView24"
        app:layout_constraintEnd_toStartOf="@+id/textView24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView28"
        app:layout_constraintEnd_toStartOf="@+id/imageView_basket"
        app:layout_constraintStart_toEndOf="@+id/textView_basket_priceDis"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView_basket_priceDis"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/_20000"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView26"
        app:layout_constraintEnd_toStartOf="@+id/textView26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:visibility="invisible"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EditTextQuantitti"
        app:layout_constraintEnd_toStartOf="@+id/imageView_basket"
        app:layout_constraintStart_toEndOf="@+id/textView_basket_quantiti"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView_basket_quantiti"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:background="@drawable/background_shape"
        android:gravity="center"
        android:text="@string/_1"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_basket_name"
        app:layout_constraintEnd_toStartOf="@+id/textView_basket_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_basket_name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_basket_down"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:background="@drawable/btn_login_shape2"
        android:padding="2dp"
        android:text="@string/changeQuantity"
        android:textColor="#ffe600"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/EditTextQuantitti"
        app:layout_constraintEnd_toStartOf="@+id/EditTextQuantitti"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/EditTextQuantitti" />

    <EditText
        android:id="@+id/EditTextQuantitti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:autofillHints="تعداد جدید محصول"
        android:hint="@string/newQuantity"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_basket_down"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="28dp"
        android:layout_height="0dp"
        android:padding="3dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/button_basket_down"
        app:layout_constraintEnd_toStartOf="@+id/button_basket_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_basket_down" />
</androidx.constraintlayout.widget.ConstraintLayout>