<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@drawable/toplogo"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.LoginnActivity">

    <ImageView
        android:id="@+id/textView23"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        android:src="@drawable/topmarketlogo"
        android:translationZ="8dp"
        app:layout_constraintDimensionRatio="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_shape"
        app:cardCornerRadius="24dp"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:translationZ="8dp"
            android:background="@drawable/text_transparent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_marginTop="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittextphonenum"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/background_yellow_white"
                    android:drawableRight="@drawable/ic_baseline_perm_phone_msg_24"
                    android:drawablePadding="10dp"
                    android:translationZ="8dp"
                    android:hint="@string/mobileNumber"
                    android:inputType="phone"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittextinavtecode"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/background_yellow_white"
                    android:drawableRight="@drawable/ic_baseline_accessibility_new_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/inviteCode"
                    android:translationZ="8dp"
                    android:inputType="textShortMessage"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnvoorod"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_login_shape2"
        android:hapticFeedbackEnabled="false"
        android:textSize="22sp"
        android:text="@string/login"
        android:translationZ="10dp"
        android:textColor="#ffe600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.143" />
</androidx.constraintlayout.widget.ConstraintLayout>